Short story share bitmap changes + Instagram sharing + bug/crash fixes

--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.facebook.android:audience-network-sdk:4.27.0'
+    compile 'com.mixpanel.android:mixpanel-android:5.+'
+    compile 'com.google.android.gms:play-services-gcm:10.0.1'
 }
 
 //dependencies {
