--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -422,12 +422,19 @@
             android:name=".ui.activity.GroupSettingsActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.activity.LeaveGroupActivity" />
+        <activity android:name=".ui.activity.EditGroupActivity" />
         <activity
             android:name=".ui.activity.AddShortStoryActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.activity.ShortStoryContainerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.GroupCategoriesSelectionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.GroupsReportedContentActivity"
             android:screenOrientation="portrait" />
 
         <receiver
