--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -457,6 +457,15 @@
         <activity
             android:name=".ui.activity.ExploreEventsResourcesActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.UserPublishedContentActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.UserDraftsContentActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.LeafNodeTopicArticlesActivity"
+            android:screenOrientation="portrait" />
 
         <receiver
             android:name="com.mycity4kids.reminders.BootCompleteReceiver"
