--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -63,10 +63,15 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-
+        <meta-data
+            android:name="com.facebook.accountkit.ApplicationName"
+            android:value="@string/app_name" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.facebook.accountkit.ClientToken"
+            android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN" />
 
         <receiver
             android:name="com.mycity4kids.receiver.InstallReferrerReceiver"
@@ -445,6 +450,10 @@
         <activity
             android:name=".ui.activity.GroupsEditPostActivity"
             android:screenOrientation="portrait" />
+        <activity android:name="com.facebook.accountkit.ui.AccountKitActivity" />
+        <activity
+            android:name=".ui.activity.FacebookPhoneLoginActivity"
+            android:screenOrientation="portrait" />
 
         <receiver
             android:name="com.mycity4kids.reminders.BootCompleteReceiver"
@@ -520,18 +529,18 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/blue_bg" />
         <!--<service-->
-            <!--android:name="com.google.android.gms.measurement.AppMeasurementService"-->
-            <!--android:enabled="false"-->
-            <!--android:exported="false"-->
-            <!--tools:replace="android:enabled" />-->
+        <!--android:name="com.google.android.gms.measurement.AppMeasurementService"-->
+        <!--android:enabled="false"-->
+        <!--android:exported="false"-->
+        <!--tools:replace="android:enabled" />-->
 
         <!--<receiver-->
-            <!--android:name="com.google.android.gms.measurement.AppMeasurementReceiver"-->
-            <!--android:enabled="false"-->
-            <!--tools:replace="android:enabled">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.gms.measurement.UPLOAD" />-->
-            <!--</intent-filter>-->
+        <!--android:name="com.google.android.gms.measurement.AppMeasurementReceiver"-->
+        <!--android:enabled="false"-->
+        <!--tools:replace="android:enabled">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.gms.measurement.UPLOAD" />-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
     </application>
 </manifest>
