--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
+Abh/
+Abhinav/
+MyMap/
+PostData/
+Table/
+ZoomInOut/
+chatapp/
+firebase/
+flogin/
+flogin2/
+fragment/
+gpstraker/
+jason2/
+post/
+sh/
+visibililyon/
+Demo/
+json2/
+GoogleApp/
+Googlemap/
+LaundaApp/
+LaundaApp2/
+Map/
+MyApplication/
+MyApplication2/
+FaceBook/
+Datasave/
+Fireapp/
+DEMo/
+Branch/
 /MyCity4Kids/build
 /MyCity4Kids/facebook-android-sdk-3.6.0/gen
 /MyCity4Kids/facebook-android-sdk-3.6.0/bin
