--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
+    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile 'com.google.api-client:google-api-client-android:1.20.0'
@@ -61,7 +62,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
-
 
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'com.yalantis:ucrop:2.1.1'
@@ -83,7 +83,6 @@ dependencies {
     compile 'com.mixpanel.android:mixpanel-android:5.+'
     compile 'com.facebook.fresco:fresco:1.10.0'
     compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
-
 }
 
 //dependencies {
@@ -92,7 +91,7 @@ dependencies {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '25.0.3'
     useLibrary 'org.apache.http.legacy'
     sourceSets {
         main {
@@ -106,7 +105,7 @@ android {
         }
 
         // Move the tests to tests/java, tests/res, etc...
-        instrumentTest.setRoot('tests')
+        androidTest.setRoot('tests')
 
         // Move the build types to build-types/<type>
         // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
