--- a/MyCity4Kids/WordPressEditor/build.gradle
+++ b/MyCity4Kids/WordPressEditor/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
@@ -20,7 +21,7 @@ android {
     publishNonDefault true
 
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         versionCode 6
@@ -49,6 +50,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'org.wordpress:utils:1.9.0'
+
 
     // Test libraries
     testCompile 'junit:junit:4.11'
