New UI Release version

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
-    android:versionCode="103"
-    android:versionName="9.1.8">
+    android:versionCode="110"
+    android:versionName="9.3">
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -481,6 +481,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.EditProfileNewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/EditorTheme" />
+        <activity
+            android:name=".ui.activity.PhoneLoginUserDetailActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/EditorTheme" />
 
         <receiver
