--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile 'com.google.firebase:firebase-appindexing:16.0.1'
     compile 'com.google.firebase:firebase-messaging:17.1.0'
     compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-storage:16.0.1'
+
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
