Video streaming feature WIP

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -491,6 +491,9 @@
             android:name=".ui.activity.PhoneLoginUserDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/EditorTheme" />
+        <activity
+            android:name=".ui.activity.CategoryVideosListingActivity"
+            android:screenOrientation="portrait" />
         <!--<activity-->
             <!--android:name=".ui.activity.ExoPlayerTestActivity"-->
             <!--android:screenOrientation="portrait" />-->
