--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -363,6 +363,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ArticleDetailsContainerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.RankingActivity"
@@ -495,46 +496,46 @@
             android:name=".ui.activity.CategoryVideosListingActivity"
             android:screenOrientation="portrait" />
         <!--<activity-->
-            <!--android:name=".ui.activity.ExoPlayerTestActivity"-->
-            <!--android:screenOrientation="portrait" />-->
+        <!--android:name=".ui.activity.ExoPlayerTestActivity"-->
+        <!--android:screenOrientation="portrait" />-->
         <!--<activity-->
-            <!--android:name=".ui.activity.PlayerActivity"-->
-            <!--android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"-->
-            <!--android:label="@string/application_name"-->
-            <!--android:launchMode="singleTop"-->
-            <!--android:theme="@style/PlayerTheme">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
+        <!--android:name=".ui.activity.PlayerActivity"-->
+        <!--android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"-->
+        <!--android:label="@string/application_name"-->
+        <!--android:launchMode="singleTop"-->
+        <!--android:theme="@style/PlayerTheme">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW" />-->
+        <!--<category android:name="android.intent.category.DEFAULT" />-->
 
-                <!--<data android:scheme="http" />-->
-                <!--<data android:scheme="https" />-->
-                <!--<data android:scheme="content" />-->
-                <!--<data android:scheme="asset" />-->
-                <!--<data android:scheme="file" />-->
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-            <!--</intent-filter>-->
+        <!--<data android:scheme="http" />-->
+        <!--<data android:scheme="https" />-->
+        <!--<data android:scheme="content" />-->
+        <!--<data android:scheme="asset" />-->
+        <!--<data android:scheme="file" />-->
+        <!--</intent-filter>-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST" />-->
+        <!--<category android:name="android.intent.category.DEFAULT" />-->
+        <!--</intent-filter>-->
         <!--</activity>-->
         <activity
             android:name=".ui.activity.ChooseVideoCategoryActivity"
             android:screenOrientation="portrait" />
 
         <!--<service-->
-            <!--android:name=".widget.DemoDownloadService"-->
-            <!--android:exported="false">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.exoplayer.downloadService.action.RESTART" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-            <!--</intent-filter>-->
+        <!--android:name=".widget.DemoDownloadService"-->
+        <!--android:exported="false">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.exoplayer.downloadService.action.RESTART" />-->
+        <!--<category android:name="android.intent.category.DEFAULT" />-->
+        <!--</intent-filter>-->
         <!--</service>-->
 
         <!--<service-->
-            <!--android:name="com.google.android.exoplayer2.scheduler.PlatformScheduler$PlatformSchedulerService"-->
-            <!--android:exported="true"-->
-            <!--android:permission="android.permission.BIND_JOB_SERVICE" />-->
+        <!--android:name="com.google.android.exoplayer2.scheduler.PlatformScheduler$PlatformSchedulerService"-->
+        <!--android:exported="true"-->
+        <!--android:permission="android.permission.BIND_JOB_SERVICE" />-->
 
         <receiver
             android:name="com.mycity4kids.reminders.BootCompleteReceiver"
