--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
@@ -91,6 +91,7 @@ dependencies {
     compile 'com.github.linger1216:labelview:v1.1.2'
     compile 'com.googlecode.mp4parser:isoparser:1.1.20'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    compile 'com.facebook.android:audience-network-sdk:5.+'
 }
 
 //dependencies {
