--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.facebook.android:audience-network-sdk:4.27.0'
     compile 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
     compile 'com.mixpanel.android:mixpanel-android:5.+'
     compile 'com.facebook.fresco:fresco:1.10.0'
@@ -91,7 +92,6 @@ dependencies {
     compile 'com.github.linger1216:labelview:v1.1.2'
     compile 'com.googlecode.mp4parser:isoparser:1.1.20'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
-    compile 'com.facebook.android:audience-network-sdk:5.+'
 }
 
 //dependencies {
