--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -80,8 +80,8 @@ dependencies {
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.facebook.android:audience-network-sdk:4.27.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.38.1'
+    compile 'com.facebook.android:audience-network-sdk:5.1.0'
     compile 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
     compile 'com.mixpanel.android:mixpanel-android:5.+'
     compile 'com.facebook.fresco:fresco:1.10.0'
