--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     compile 'com.github.linger1216:labelview:v1.1.2'
     compile 'com.googlecode.mp4parser:isoparser:1.1.20'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    compile 'io.branch.sdk.android:library:3.+'
 }
 
 //dependencies {
