--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
     android:versionCode="115"
-    android:versionName="9.5.1">
+    android:versionName="9.5.6">
 
     <uses-sdk tools:overrideLibrary="com.crashlytics.android, im.ene.toro.exoplayer, im.ene.toro,com.facebook.shimmer,org.wordpress.android.editor" />
     <!-- So that we can get the account name -->
@@ -31,7 +31,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     !-- Maps API needs OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -424,7 +423,7 @@
         <activity
             android:name=".ui.activity.AddShortStoryActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ui.activity.ShortStoryContainerActivity"
             android:screenOrientation="portrait" />
@@ -446,7 +445,6 @@
         <activity
             android:name=".ui.activity.ExploreArticleListingTypeActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.activity.ShortStoriesListingContainerActivity"
             android:screenOrientation="portrait" />
@@ -498,47 +496,54 @@
         <activity
             android:name=".ui.activity.CategoryVideosListingActivity"
             android:screenOrientation="portrait" />
-        <!--<activity-->
-        <!--android:name=".ui.activity.ExoPlayerTestActivity"-->
-        <!--android:screenOrientation="portrait" />-->
-        <!--<activity-->
-        <!--android:name=".ui.activity.PlayerActivity"-->
-        <!--android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"-->
-        <!--android:label="@string/application_name"-->
-        <!--android:launchMode="singleTop"-->
-        <!--android:theme="@style/PlayerTheme">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW" />-->
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
 
-        <!--<data android:scheme="http" />-->
-        <!--<data android:scheme="https" />-->
-        <!--<data android:scheme="content" />-->
-        <!--<data android:scheme="asset" />-->
-        <!--<data android:scheme="file" />-->
-        <!--</intent-filter>-->
-        <!--<intent-filter>-->
-        <!--<action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST" />-->
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
-        <!--</intent-filter>-->
-        <!--</activity>-->
+        <activity
+            android:name=".ui.activity.ChallnegeDetailListingActivity"
+            android:screenOrientation="portrait" />
+
+        <!-- <activity -->
+        <!-- android:name=".ui.activity.ExoPlayerTestActivity" -->
+        <!-- android:screenOrientation="portrait" /> -->
+        <!-- <activity -->
+        <!-- android:name=".ui.activity.PlayerActivity" -->
+        <!-- android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode" -->
+        <!-- android:label="@string/application_name" -->
+        <!-- android:launchMode="singleTop" -->
+        <!-- android:theme="@style/PlayerTheme"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="com.google.android.exoplayer.demo.action.VIEW" /> -->
+        <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+
+
+        <!-- <data android:scheme="http" /> -->
+        <!-- <data android:scheme="https" /> -->
+        <!-- <data android:scheme="content" /> -->
+        <!-- <data android:scheme="asset" /> -->
+        <!-- <data android:scheme="file" /> -->
+        <!-- </intent-filter> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST" /> -->
+        <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity
             android:name=".ui.activity.ChooseVideoCategoryActivity"
             android:screenOrientation="portrait" />
 
-        <!--<service-->
-        <!--android:name=".widget.DemoDownloadService"-->
-        <!--android:exported="false">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="com.google.android.exoplayer.downloadService.action.RESTART" />-->
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
-        <!--</intent-filter>-->
-        <!--</service>-->
+        <!-- <service -->
+        <!-- android:name=".widget.DemoDownloadService" -->
+        <!-- android:exported="false"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="com.google.android.exoplayer.downloadService.action.RESTART" /> -->
+        <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+        <!-- </intent-filter> -->
+        <!-- </service> -->
 
-        <!--<service-->
-        <!--android:name="com.google.android.exoplayer2.scheduler.PlatformScheduler$PlatformSchedulerService"-->
-        <!--android:exported="true"-->
-        <!--android:permission="android.permission.BIND_JOB_SERVICE" />-->
+
+        <!-- <service -->
+        <!-- android:name="com.google.android.exoplayer2.scheduler.PlatformScheduler$PlatformSchedulerService" -->
+        <!-- android:exported="true" -->
+        <!-- android:permission="android.permission.BIND_JOB_SERVICE" /> -->
 
         <receiver
             android:name="com.mycity4kids.reminders.BootCompleteReceiver"
