--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     //    compile project(':google-play-services_lib')
     //    compile ('com.facebook.android:facebook-android-sdk:3.23.1')
-//    compile project(':facebook-android-sdk-3.6.0')
+    //    compile project(':facebook-android-sdk-3.6.0')
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
     // Dependency for Google Sign-In
@@ -33,7 +33,7 @@ dependencies {
     compile project(':WordPressEditor')
     compile project(':laser-native-editor')
     compile files('libs/comscore.jar')
-//    compile project(':progressviewslib')
+    //    compile project(':progressviewslib')
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.google.android.gms:play-services-plus:15.0.1'
@@ -49,7 +49,6 @@ dependencies {
     compile 'com.google.firebase:firebase-core:16.0.1'
     compile 'com.google.firebase:firebase-storage:16.0.1'
     compile 'com.google.firebase:firebase-auth:16.0.1'
-
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -57,12 +56,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
-
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile 'com.google.api-client:google-api-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client-gson:1.20.0'
     compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
-
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -72,7 +69,7 @@ dependencies {
     compile 'com.yalantis:ucrop:2.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-//  compile 'life.knowledge4:k4l-video-trimmer:1.0'
+    //  compile 'life.knowledge4:k4l-video-trimmer:1.0'
     compile 'io.tus.java.client:tus-java-client:0.3.1'
     compile 'io.tus.android.client:tus-android-client:0.1.4'
     compile 'com.afollestad:easyvideoplayer:0.3.0'
@@ -102,8 +99,11 @@ dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-
     compile 'com.devlomi.record-view:record-view:2.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+
 }
 
 //dependencies {
@@ -183,8 +183,7 @@ android {
     }
 }
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
         def requested = details.requested
